Fixed white gap issue

--- a/landing-page.css
+++ b/landing-page.css
@@ -1,10 +1,8 @@
 html
 {
     background-image: url(assets/blurry-background-1.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
+    min-height: 100%;
 }
 
 body
